--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
-    <!--<TextView-->
-        <!--android:id="@+id/sample_text"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Hello World!"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent" />-->
+    <View
+        android:id="@+id/rect"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginLeft="155dp"
+        android:background="@drawable/rect" />
+
+    <View
+        android:id="@+id/circle"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_marginRight="120dp"
+        android:layout_gravity="center_vertical|center"
+        android:background="@drawable/circle" />
+
+
+
+    <TextView
+        android:id="@+id/tvNoSign"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:text="NO SIGN DETECTED"
+        android:textAlignment="center"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginRight="120dp"
+        android:textSize="50dp" />
+
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:id="@+id/tvCurrentSpeed"
+        android:textSize="45dp"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="155dp"
+        android:layout_gravity="center_vertical|center"
+        android:textAlignment="center" />
+
+
+    <ImageView
+        android:id="@+id/ivSignBackground"
+        android:layout_width="330dp"
+        android:layout_height="330dp"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginRight="120dp"
+        android:src="@drawable/sign_background"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/tvMaxSpeed"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:gravity="center_vertical"
+        android:textAlignment="center"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginRight="120dp"
+        android:textSize="200dp" />
 
     <Button
-        android:text="PhotoTest"
+        android:id="@+id/signFinder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/signFinder"/>
+        android:layout_marginTop="50dp"
+        android:layout_gravity="right|top"
+        android:text="PhotoTest" />
 
     <Button
         android:text="CamTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:layout_constraintLeft_toRightOf="@+id/signFinder"
+        android:layout_gravity="right|top"
         android:id="@+id/signFinderCamTest"/>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
