--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,17 @@
     android:layout_height="fill_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
+
     tools:context=".MainActivity">
+
+    <org.opencv.android.JavaCameraView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/dummy_camera_view"
+        opencv:show_fps="false"
+        android:background="@drawable/background_small"
+        opencv:camera_id="any"/>
 
 
     <View
@@ -68,13 +77,7 @@
         android:textSize="200dp" />
 
 
-    <org.opencv.android.JavaCameraView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/dummy_camera_view"
-        opencv:show_fps="true"
-        opencv:camera_id="any"/>
+
 
     <Button
         android:id="@+id/signFinder"
