--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,8 @@
         android:layout_width="250dp"
         android:layout_height="150dp"
         android:id="@+id/tvCurrentSpeed"
-        android:textSize="45dp"
+        android:textSize="40dp"
+        android:textColor="#fff"
         android:gravity="center_vertical"
         android:layout_marginLeft="155dp"
         android:layout_gravity="center_vertical|center"
