--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:opencv="http://schemas.android.com/apk/res-auto"
-
+    android:background="@drawable/background_small"
     tools:context=".MainActivity">
 
-    <org.opencv.android.JavaCameraView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/dummy_camera_view"
-        opencv:show_fps="false"
-        android:background="@drawable/background_small"
-        opencv:camera_id="any"/>
+    <View
+        android:id="@+id/rectStr"
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/rect" />
 
 
     <View
@@ -25,37 +25,50 @@
         android:layout_marginLeft="155dp"
         android:background="@drawable/rect" />
 
+
     <View
         android:id="@+id/circle"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:layout_marginRight="120dp"
-        android:layout_gravity="center_vertical|center"
-        android:background="@drawable/circle" />
 
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginRight="120dp"
+        android:background="@drawable/circle" />
 
 
     <TextView
         android:id="@+id/tvNoSign"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:text="NO SIGN DETECTED"
-        android:textAlignment="center"
-        android:gravity="center_vertical"
         android:layout_gravity="center_vertical|center"
         android:layout_marginRight="120dp"
+        android:gravity="center_vertical"
+        android:text="NO SIGN DETECTED"
+        android:textAlignment="center"
         android:textSize="50dp" />
 
     <TextView
+        android:id="@+id/tvCurrentStr"
+        android:layout_width="225dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical|center"
+        android:layout_marginLeft="155dp"
+        android:layout_marginTop="95dp"
+        android:gravity="center_vertical"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/tvCurrentSpeed"
         android:layout_width="250dp"
         android:layout_height="150dp"
-        android:id="@+id/tvCurrentSpeed"
-        android:textSize="40dp"
-        android:textColor="#fff"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="155dp"
         android:layout_gravity="center_vertical|center"
-        android:textAlignment="center" />
+        android:layout_marginLeft="155dp"
+        android:gravity="center_vertical"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        android:textSize="40dp" />
 
 
     <ImageView
@@ -71,28 +84,11 @@
         android:id="@+id/tvMaxSpeed"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:gravity="center_vertical"
-        android:textAlignment="center"
         android:layout_gravity="center_vertical|center"
         android:layout_marginRight="120dp"
+        android:gravity="center_vertical"
+        android:textAlignment="center"
         android:textSize="200dp" />
 
-
-
-
-    <Button
-        android:id="@+id/signFinder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="right|top"
-        android:text="PhotoTest" />
-
-    <Button
-        android:text="CamTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:id="@+id/signFinderCamTest"/>
 
 </FrameLayout>
